# c-matrix

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
examples/: CMakeLists.txt  main.c
examples/cube/: CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt  matrix.c  matrix.h  matrix_errors.h
src/matrix/: core.h  decomposition.c  decomposition.h  determinant.c  determinant.h  errors.h  identity.c  identity.h  linalg.h  matrix.c  matrix.h  operations.c  operations.h  print.c  print.h  vector.h
src/matrix/core/: core.c  errors.h  operations.c  print.c
src/matrix/linalg/: decomposition.c  determinant.c  identity.c
src/matrix/vector/: vector.c
tests/: CMakeLists.txt  determinant.c  determinant.h  inverse.c  inverse.h  main.c  operations.c  operations.h  triangular.c  triangular.h  utils.h
tools/: run.sh
